--- a/adma_geo/templates/filemanager/folder_detail.html
+++ b/adma_geo/templates/filemanager/folder_detail.html
@@ -90,6 +90,9 @@
                 <button class="btn btn-outline-primary" onclick="showCreateFolderModal()">
                     <i class="fas fa-folder-plus me-2"></i>New Folder
                 </button>
+                <button class="btn btn-outline-success" onclick="showUploadFoldersModal()">
+                    <i class="fas fa-folder-open me-2"></i>Upload Folders
+                </button>
                 <button class="btn btn-primary" onclick="showUploadModal()">
                     <i class="fas fa-upload me-2"></i>Upload Files
                 </button>
